# Population_atlas_Ramadass

./: README.md  deformable_reg_i100.slurm
affine_registered_template/: CMakeLists.txt  affine_register.cxx
all_averaged_template/: CMakeLists.txt  average_all_rough.cxx
antsPy/: affine_registration.py  affine_wo_average.py  average_image.py  deformable_registration.py  deformable_wo_average.py  requirements.txt  rigid_registration_with_slant_mask.py  rigid_registration_wo_average.py
deformable_registration/: CMakeLists.txt  deformable_registration.cxx
